--- a/ordermanag.html
+++ b/ordermanag.html
@@ -54,7 +54,7 @@ label { position:absolute; left:12px; top:14px; pointer-events:none; transition:
 
 <div class="container">
 <h1>Management</h1>
-<!-- <button class="main-btn" id="openAddBtn">➕ Add Order</button> -->
+<button class="main-btn" id="openAddBtn">➕ Add Order</button>
 <div class="form-group" style="margin-top:20px;">
   <input type="text" id="searchInput" placeholder="🔍 Search orders by customer or product">
 </div>
@@ -242,6 +242,7 @@ fetchOrders();
 </script>
 </body>
 </html>
+
 
 
 
