--- a/ordermanag.html
+++ b/ordermanag.html
@@ -3,15 +3,30 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Order Management</title>
+<title>Product List</title>
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
 <style>
 * { margin:0; padding:0; box-sizing:border-box; font-family:'Inter',sans-serif; }
 body { background: linear-gradient(135deg,#0f2027,#203a43,#2c5364); min-height:100vh; display:flex; justify-content:center; align-items:flex-start; padding:40px 20px; }
 .container { width:100%; max-width:1000px; padding:30px; color:#fff; animation:fadeIn 0.8s ease; text-align:center; }
 h1 { margin-bottom:25px; font-size:32px; font-weight:700; color:#fff; }
-.main-btn { margin:10px; background: linear-gradient(135deg,#43e97b,#38f9d7); color:#111; font-weight:600; border-radius:12px; border:none; cursor:pointer; padding:12px 25px; font-size:16px; backdrop-filter:blur(10px); box-shadow:0 4px 15px rgba(0,0,0,0.2); transition: all 0.3s ease; }
-.main-btn:hover { transform: translateY(-2px) scale(1.05); box-shadow: 0 6px 20px rgba(0,0,0,0.3); }
+
+.form-group { position: relative; margin-bottom:25px; width:100%; max-width:400px; margin-left:auto; margin-right:auto; }
+input[type="text"] {
+  width: 100%;
+  padding: 14px 20px;
+  border-radius: 12px;
+  border: 2px solid rgba(255,255,255,0.2);
+  background: rgba(255,255,255,0.05);
+  color: #fff;
+  font-size: 14px;
+  outline: none;
+  backdrop-filter: blur(10px);
+  transition: all 0.3s ease;
+}
+input[type="text"]::placeholder { color: #bbb; }
+input[type="text"]:focus { border-color: #43e97b; background: rgba(255,255,255,0.1); }
+
 .orders { display:grid; grid-template-columns: repeat(auto-fit,minmax(280px,1fr)); gap:20px; margin-top:20px; }
 .customer-card { background: rgba(255,255,255,0.08); backdrop-filter: blur(20px); border-radius: 20px; padding: 20px; color: #fff; box-shadow: 0 8px 25px rgba(0,0,0,0.3); transition: transform 0.3s ease, box-shadow 0.3s ease; text-align: center; }
 .customer-card:hover { transform: translateY(-5px); box-shadow: 0 12px 30px rgba(0,0,0,0.5); }
@@ -20,90 +35,30 @@ h1 { margin-bottom:25px; font-size:32px; font-weight:700; color:#fff; }
 .avatar img { width:100%; height:100%; object-fit:cover; border-radius:50%; }
 .card-header h3 { font-size:18px; font-weight:600; margin:0; background: linear-gradient(45deg,#43e97b,#38f9d7); -webkit-background-clip: text; -webkit-text-fill-color: transparent; }
 .card-body p { font-size:14px; margin:5px 0; color:#ccc; }
-.actions { display:flex; justify-content:center; gap:10px; flex-wrap:wrap; margin-top:10px; }
-.actions button.edit-btn { background: linear-gradient(135deg,#2196f3,#21cbf3); color:#fff; font-weight:600; border-radius:12px; border:none; cursor:pointer; padding:8px 16px; font-size:14px; transition: all 0.3s ease; }
-.actions button.delete-btn { background: linear-gradient(135deg,#f44336,#ff6b6b); color:#fff; font-weight:600; border-radius:12px; border:none; cursor:pointer; padding:8px 16px; font-size:14px; transition: all 0.3s ease; }
-.actions button.edit-btn:hover, .actions button.delete-btn:hover { transform: translateY(-2px) scale(1.05); }
-.actions button.edit-btn:active, .actions button.delete-btn:active { transform: translateY(0) scale(0.98); }
+
 .toast-container { position: fixed; top: 20px; right: 20px; z-index: 9999; display: flex; flex-direction: column; gap: 10px; }
-.toast { background: rgba(0,0,0,0.8); color: #fff; padding: 12px 18px; border-radius: 10px; font-size: 14px; animation: slideIn 0.4s ease, fadeOut 0.5s ease 2.5s forwards; min-width: 200px; box-shadow: 0 5px 15px rgba(0,0,0,0.3); }
-.toast.success { background: linear-gradient(45deg,#43e97b,#38f9d7); color:#111; }
-.toast.error { background: linear-gradient(45deg,#ff6b6b,#f06595); }
-.toast.info { background: linear-gradient(45deg,#4facfe,#00f2fe); color:#111; }
-@keyframes slideIn { from { opacity:0; transform:translateX(100%);} to {opacity:1; transform:translateX(0);} }
-@keyframes fadeOut { to { opacity:0; transform:translateX(100%);} }
+.toast { background: rgba(0,0,0,0.8); color: #fff; padding: 12px 18px; border-radius: 10px; font-size: 14px; min-width: 200px; box-shadow: 0 5px 15px rgba(0,0,0,0.3); }
+
 @keyframes fadeIn { from {opacity:0; transform:translateY(20px);} to {opacity:1; transform:translateY(0);} }
-.modal { position: fixed; top:0; left:0; width:100%; height:100%; display:flex; justify-content:center; align-items:center; background: rgba(0,0,0,0.6); opacity:0; visibility:hidden; transition:0.3s; z-index:10000; }
-.modal.active { opacity:1; visibility:visible; }
-.modal-content { background: rgba(255,255,255,0.05); padding:30px 25px; border-radius:20px; width:90%; max-width:400px; color:#fff; position:relative; text-align:center; backdrop-filter: blur(15px); border:1px solid rgba(255,255,255,0.2); transform: translateY(-50px); transition: transform 0.3s ease; }
-.modal.active .modal-content { transform: translateY(0); }
-.modal-content h2 { margin-bottom:20px; }
-.modal-close { position:absolute; top:15px; right:20px; cursor:pointer; font-size:22px; color:#fff; }
-.form-group { position:relative; margin-bottom:15px; }
-input, input[type=file] { width:100%; padding:14px 12px; border:none; border-radius:12px; background: rgba(255,255,255,0.1); color:#fff; font-size:14px; transition:0.3s; backdrop-filter: blur(8px); outline:none; }
-input:focus { background: rgba(255,255,255,0.2); }
-input:focus + label, input:not(:placeholder-shown) + label { top:-10px; font-size:12px; color:#43e97b; }
-label { position:absolute; left:12px; top:14px; pointer-events:none; transition:0.3s; color:#bbb; }
-.modal-content button { background: linear-gradient(135deg,#43e97b,#38f9d7); color:#111; font-weight:600; border-radius:12px; border:none; cursor:pointer; padding:12px 20px; font-size:14px; backdrop-filter:blur(10px); box-shadow:0 4px 15px rgba(0,0,0,0.2); transition: all 0.3s ease; width: 100%; }
-.modal-content button:hover { transform: translateY(-2px) scale(1.05); box-shadow: 0 6px 20px rgba(0,0,0,0.3); }
-.modal-content button:active { transform: translateY(0) scale(0.98); }
+
 @media(max-width:600px){ .orders { grid-template-columns:1fr; } .container { padding:0px; } }
 </style>
 </head>
 <body>
 
 <div class="container">
-<h1>📦 Order Management</h1>
-<button class="main-btn" id="openAddBtn">➕ Add Order</button>
-<div class="form-group" style="margin-top:20px;">
-  <input type="text" id="searchInput" placeholder="🔍 Search orders by customer or product">
-</div>
-<div class="orders" id="orderContainer"></div>
+  <h1>Product List</h1>
+  <div class="form-group">
+    <input type="text" id="searchInput" placeholder="🔍 Search Products">
+  </div>
+  <div class="orders" id="orderContainer"></div>
 </div>
 
 <div class="toast-container" id="toastContainer"></div>
 
-<!-- Add Modal -->
-<div class="modal" id="addModal">
-  <div class="modal-content">
-    <span class="modal-close" id="addClose">&times;</span>
-    <h2>Add Order</h2>
-    <div class="form-group"><input type="text" id="modalCustomer" placeholder=" " required><label>Customer Name</label></div>
-    <div class="form-group"><input type="text" id="modalProduct" placeholder=" " required><label>Product Name</label></div>
-    <div class="form-group"><input type="number" id="modalQuantity" placeholder=" " min="1" required><label>Quantity</label></div>
-    <div class="form-group"><input type="number" id="modalPrice" placeholder=" " min="1" required><label>Price</label></div>
-    <div class="form-group"><input type="file" id="modalImageFile" accept="image/*" required></div>
-    <button id="addOrderBtn">Add Order</button>
-  </div>
-</div>
-
-<!-- Edit Modal -->
-<div class="modal" id="editModal">
-  <div class="modal-content">
-    <span class="modal-close" id="editClose">&times;</span>
-    <h2>Edit Order</h2>
-    <div class="form-group"><input type="text" id="editCustomer" placeholder=" " required><label>Customer Name</label></div>
-    <div class="form-group"><input type="text" id="editProduct" placeholder=" " required><label>Product Name</label></div>
-    <div class="form-group"><input type="number" id="editQuantity" placeholder=" " min="1" required><label>Quantity</label></div>
-    <div class="form-group"><input type="number" id="editPrice" placeholder=" " min="1" required><label>Price</label></div>
-    <div class="form-group"><input type="file" id="editImageFile" accept="image/*"></div>
-    <button id="saveEditBtn">Save Changes</button>
-  </div>
-</div>
-
-<!-- Delete Modal -->
-<div class="modal" id="deleteModal">
-  <div class="modal-content">
-    <span class="modal-close" id="deleteClose">&times;</span>
-    <h2>Delete Order</h2>
-    <p>Are you sure you want to delete this order?</p>
-    <button id="confirmDeleteBtn" class="delete-btn">Delete</button>
-  </div>
-</div>
-
 <script type="module">
 import { initializeApp } from "https://www.gstatic.com/firebasejs/9.6.4/firebase-app.js";
-import { getFirestore, collection, addDoc, getDocs, updateDoc, deleteDoc, doc } from "https://www.gstatic.com/firebasejs/9.6.4/firebase-firestore.js";
+import { getFirestore, collection, getDocs } from "https://www.gstatic.com/firebasejs/9.6.4/firebase-firestore.js";
 
 const firebaseConfig = {
   apiKey:"AIzaSyAyZ4beGiZO-Y9Qxo1kAia_bIMSbgHbFc8",
@@ -113,128 +68,58 @@ const firebaseConfig = {
   messagingSenderId:"967667783091",
   appId:"1:967667783091:web:7c630abad0fe9835f8e7c6"
 };
+
 const app = initializeApp(firebaseConfig);
 const db = getFirestore(app);
+const orderContainer = document.getElementById('orderContainer');
 
-const orderContainer=document.getElementById('orderContainer');
-const toastContainer=document.getElementById('toastContainer');
-const addModal=document.getElementById('addModal');
-const editModal=document.getElementById('editModal');
-const deleteModal=document.getElementById('deleteModal');
+let allOrders = [];
 
-document.getElementById('openAddBtn').onclick=()=>addModal.classList.add('active');
-document.getElementById('addClose').onclick=()=>addModal.classList.remove('active');
-document.getElementById('editClose').onclick=()=>editModal.classList.remove('active');
-document.getElementById('deleteClose').onclick=()=>deleteModal.classList.remove('active');
-
-addModal.onclick=e=>{ if(e.target===addModal) addModal.classList.remove('active'); }
-editModal.onclick=e=>{ if(e.target===editModal) editModal.classList.remove('active'); }
-deleteModal.onclick=e=>{ if(e.target===deleteModal) deleteModal.classList.remove('active'); }
-
-function showToast(msg,type="info"){const t=document.createElement('div'); t.className=`toast ${type}`; t.textContent=msg; toastContainer.appendChild(t); setTimeout(()=>t.remove(),3000); }
-
-let currentEditId=null, currentDeleteId=null, currentEditImage=null, allOrders=[];
-
-// Convert image file to Base64
-function fileToBase64(file){ return new Promise((res,rej)=>{ const reader=new FileReader(); reader.onload=()=>res(reader.result); reader.onerror=err=>rej(err); reader.readAsDataURL(file); }); }
+function showToast(msg) {
+  const t = document.createElement('div');
+  t.className = 'toast';
+  t.textContent = msg;
+  document.getElementById('toastContainer').appendChild(t);
+  setTimeout(() => t.remove(), 3000);
+}
 
 async function fetchOrders(){
-  const snapshot=await getDocs(collection(db,'orders'));
-  allOrders=snapshot.docs.map(doc=>({id:doc.id,...doc.data()}));
-  allOrders.sort((a,b)=>new Date(b.date)-new Date(a.date));
-  renderOrders(allOrders);
+  try {
+    const snapshot = await getDocs(collection(db,'orders'));
+    allOrders = snapshot.docs.map(doc => ({id: doc.id, ...doc.data()}));
+    allOrders.sort((a,b)=> new Date(b.date) - new Date(a.date));
+    renderOrders(allOrders);
+  } catch(err) {
+    showToast("❌ "+err.message);
+  }
 }
 
 function renderOrders(orders){
-  orderContainer.innerHTML='';
-  if(orders.length===0){ orderContainer.innerHTML='<p style="text-align:center;color:#ccc;">No orders found.</p>'; return; }
-  orders.forEach(o=>{
-    const card=document.createElement('div');
-    card.className='customer-card';
-    card.innerHTML=`
+  orderContainer.innerHTML = '';
+  if(orders.length === 0){
+    orderContainer.innerHTML = '<p style="text-align:center;color:#ccc;">No orders found.</p>';
+    return;
+  }
+  orders.forEach(o => {
+    const card = document.createElement('div');
+    card.className = 'customer-card';
+    card.innerHTML = `
       <div class="card-header">
         <div class="avatar">${o.image ? `<img src="${o.image}">` : '👤'}</div>
         <h3>${o.customer}</h3>
       </div>
       <div class="card-body">
-        <p><strong>Product:</strong> ${o.product}</p>
-        <p><strong>Quantity:</strong> ${o.quantity}</p>
         <p><strong>Price:</strong> ৳${o.price}</p>
         <p><strong>Date:</strong> ${new Date(o.date).toLocaleDateString()}</p>
-      </div>
-      <div class="actions">
-        <button class="edit-btn" onclick="openEditModal('${o.id}','${o.customer}','${o.product}','${o.quantity}','${o.price}','${o.image || ''}')">Edit</button>
-        <button class="delete-btn" onclick="openDeleteModal('${o.id}')">Delete</button>
       </div>`;
     orderContainer.appendChild(card);
   });
 }
 
-// Add Order
-document.getElementById('addOrderBtn').onclick=async()=>{
-  const btn=document.getElementById('addOrderBtn');
-  btn.disabled=true;
-  const originalText=btn.textContent;
-  btn.textContent="Adding...";
-
-  try{
-    const customer=document.getElementById('modalCustomer').value;
-    const product=document.getElementById('modalProduct').value;
-    const quantity=parseInt(document.getElementById('modalQuantity').value);
-    const price=parseFloat(document.getElementById('modalPrice').value);
-    const file=document.getElementById('modalImageFile').files[0];
-    if(!file){ showToast("❌ Please select an image","error"); btn.disabled=false; btn.textContent=originalText; return; }
-    const image=await fileToBase64(file);
-    const date=new Date().toISOString();
-    await addDoc(collection(db,'orders'),{customer,product,quantity,price,image,date});
-    showToast("✅ Order added","success");
-    addModal.classList.remove('active');
-    fetchOrders();
-  }catch(err){ showToast("❌ "+err.message,"error"); }
-  finally{ btn.disabled=false; btn.textContent=originalText; }
-}
-
-// Edit/Delete
-window.openEditModal=(id,cust,prod,qty,price,image)=>{
-  currentEditId=id;
-  document.getElementById('editCustomer').value=cust;
-  document.getElementById('editProduct').value=prod;
-  document.getElementById('editQuantity').value=qty;
-  document.getElementById('editPrice').value=price;
-  currentEditImage=image;
-  editModal.classList.add('active');
-}
-
-document.getElementById('saveEditBtn').onclick=async()=>{
-  const btn=document.getElementById('saveEditBtn');
-  btn.disabled=true;
-  const originalText=btn.textContent;
-  btn.textContent="Saving...";
-  try{
-    const customer=document.getElementById('editCustomer').value;
-    const product=document.getElementById('editProduct').value;
-    const quantity=parseInt(document.getElementById('editQuantity').value);
-    const price=parseFloat(document.getElementById('editPrice').value);
-    let image=currentEditImage;
-    const file=document.getElementById('editImageFile').files[0];
-    if(file){ image=await fileToBase64(file); }
-    await updateDoc(doc(db,'orders',currentEditId),{customer,product,quantity,price,image});
-    showToast("✏️ Order updated","info");
-    editModal.classList.remove('active');
-    fetchOrders();
-  }catch(err){ showToast("❌ "+err.message,"error"); }
-  finally{ btn.disabled=false; btn.textContent=originalText; }
-}
-
-window.openDeleteModal=(id)=>{ currentDeleteId=id; deleteModal.classList.add('active'); }
-document.getElementById('confirmDeleteBtn').onclick=async()=>{
-  try{ await deleteDoc(doc(db,'orders',currentDeleteId)); showToast("🗑️ Deleted","error"); deleteModal.classList.remove('active'); fetchOrders(); }catch(err){ showToast("❌ "+err.message,"error"); }
-}
-
 // Realtime Search
-document.getElementById('searchInput').addEventListener('input',(e)=>{
-  const q=e.target.value.toLowerCase();
-  const filtered=allOrders.filter(o=> o.customer.toLowerCase().includes(q) || o.product.toLowerCase().includes(q));
+document.getElementById('searchInput').addEventListener('input', (e) => {
+  const q = e.target.value.toLowerCase();
+  const filtered = allOrders.filter(o => o.customer.toLowerCase().includes(q));
   renderOrders(filtered);
 });
 
