--- a/omline-music/music.html
+++ b/omline-music/music.html
@@ -7,7 +7,7 @@
 <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 <meta name="mobile-web-app-capable" content="yes">
 
-<title>StyloPlayer | Responsive</title>
+<title>StyloPlayer</title>
 
 <script src="https://cdn.tailwindcss.com"></script>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
@@ -338,4 +338,5 @@ volumeIcon.addEventListener("click", () => {
 });
 </script>
 </body>
+
 </html>
