--- a/coin/crypto-profit-calculator.html
+++ b/coin/crypto-profit-calculator.html
@@ -28,10 +28,10 @@
         <option value="long">Long</option>
         <option value="short">Short</option>
       </select>
-      <input type="number" step="any" id="leverage" placeholder="Leverage (x)" value="5" required>
-      <input type="number" step="any" id="invest" placeholder="Investment (USD)" value="100" required>
-      <input type="number" step="any" id="entryPrice" placeholder="Entry Price" value="0.0399234" required>
-      <input type="number" step="any" id="exitPrice" placeholder="Exit Price" value="0.0412345" required>
+      <input type="number" step="any" id="leverage" placeholder="Leverage (x)"  required>
+      <input type="number" step="any" id="invest" placeholder="Investment (USD)"  required>
+      <input type="number" step="any" id="entryPrice" placeholder="Entry Price"  required>
+      <input type="number" step="any" id="exitPrice" placeholder="Exit Price"  required>
       <button type="submit">Calculate</button>
     </form>
     <div id="output" class="result" style="display:none"></div>
@@ -84,3 +84,4 @@
   </script>
 </body>
 </html>
+
